# Gemma3nAPP_Andriod

./: create_andriod_project.sh
AndroidLLMApp/app/src/main/java/com/yourname/androidllmapp/data/: LLMManager.kt
AndroidLLMApp/app/src/main/java/com/yourname/androidllmapp/ui/: ChatViewModel.kt  MainActivity.kt
AndroidLLMApp/app/src/main/java/com/yourname/androidllmapp/ui/screens/: ChatScreen.kt  SettingsScreen.kt
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: whisper-jni.cpp
app/src/main/java/com/yourname/androidllmapp/data/: AudioRecorder.kt  LLMManager.kt  WhisperBridge.kt
app/src/main/java/com/yourname/androidllmapp/ui/: ChatViewModel.kt  MainActivity.kt
app/src/main/java/com/yourname/androidllmapp/ui/components/: ChatInputArea.kt  DropdownMenuBox.kt  MessageBubble.kt
app/src/main/java/com/yourname/androidllmapp/ui/screens/: CameraPreview.kt  ChatScreen.kt  FollowUpChatScreen.kt  SettingsScreen.kt
app/src/main/java/com/yourname/androidllmapp/util/: ImageUtils.kt
gradle/wrapper/: gradle-wrapper.properties
